@@ -1,3 +1,8 @@
+2021-06-20 Maarten Brock <sourceforge.brock AT dse.nl>
+
+	* src/SDCCopt.c (optimizeOpWidth):
+	  applied todays patch 392 from Visenri along with some cosmetics
+
 2021-06-20 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/bug-3256.c:
